Fix brand logo on mobile devices

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -48,3 +48,9 @@ footer .row .col.offset-l2 {
 .user-nav {
   margin-right: 1em;
 }
+
+@media only screen and (max-width: 350px) {
+  .brand-logo {
+    padding-left: 1em !important;
+  } 
+}
